fix code dam bao SOLID